Fixed VAT computing error

--- a/views/reports/invoice.ejs
+++ b/views/reports/invoice.ejs
@@ -216,7 +216,7 @@
                         <%= ccySymbol %><%= itemVM.subtotal %>
                     </td>
                     <td>
-                        <%= ccySymbol %><%= itemVM.vat %> / <%= itemVM.varPercentage %>%
+                        <%= ccySymbol %><%= itemVM.vat %> / <%= itemVM.vatPercentage %>%
                     </td>
                 </tr>
             <% }); %>
