#95 Refactored the report generation on the backend (removed data layer, simplified the generation steps)

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/backup-report/template/settings-backup-report.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/backup-report/template/settings-backup-report.html
@@ -3,7 +3,7 @@
 	<div class="row basic-info-form">
 		<div class="col-xs-12 col-md-6">
 			<label class="control-label">
-				<h3>{{ 'Select your time zone' | translate }}</h3><small>{{ 'This will be used for automatic processes that need to know your local hour' | translate }}</small>
+				<h3>{{ 'Generate BackUp Report' | translate }}</h3><small>{{ 'Contains the arrivals, in house guests and departures for today' | translate }}</small>
 			</label>
 			<hr>
 			<div class="row">
