--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/shift-report/template/settings-shift-report.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/shift-report/template/settings-shift-report.html
@@ -4,7 +4,7 @@
 	<div class="row basic-info-form">
 		<div class="col-xs-12 col-md-6">
 			<label class="control-label">
-				<h3>{{ 'Select your time zone' | translate }}</h3><small>{{ 'This will be used for automatic processes that need to know your local hour' | translate }}</small>
+				<h3>{{ 'Generate Shift Report' | translate }}</h3><small>{{ 'The shift report between two intervals' | translate }}</small>
 			</label>
 			<hr>
 			<div class="row">
