#89 Added the grouping type in the key metrics report on the client

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/key-metrics-report/template/settings-key-metrics-report.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/key-metrics-report/template/settings-key-metrics-report.html
@@ -26,6 +26,15 @@
 					</th-date-picker>
 				</div>
 
+				<div class="col-xs-6 col-md-6 form-group">
+					<label>{{ 'Group Values By' | translate }}</label>
+					<div class="input-group">
+						<select class="form-control" [ngModel]="selectedPeriodType" (ngModelChange)="didSelectPeriodOption($event)">
+							<option *ngFor="let periodOption of periodOptionList" [value]="periodOption.type">{{ periodOption.displayName | translate }}</option>
+						</select>
+					</div>
+				</div>
+
 				<div *ngIf="!isLoading" class="col-xs-12 col-md-offset-9 col-md-3">
 					<a class="btn btn-primary btn-block" [href]="reportCSVUrl()" target="_blank">{{ 'Generate' | translate }}</a>
 				</div>
