--- a/views/reports/report.ejs
+++ b/views/reports/report.ejs
@@ -10,21 +10,18 @@
     <link href="assets/client/static-assets/css/unitpal-print.css" rel="stylesheet">
 
     <style>
-    .table-box{
+    .table-box {
         max-width:800px;
         margin:auto;
         padding-right: 20px;
         padding-left: 20px;
-        font-size:17px;
+        font-size:12px;
         line-height:22px;
         font-family: 'Roboto', sans-serif;
         color:#555;
     }
-    .small-line-height {
-        line-height:17px;
-    }
     
-    .table-box table{
+    .table-box table {
         width:100%;
         line-height:inherit;
         text-align:left;
@@ -70,24 +67,6 @@
         height: 100%;
         margin: 0 auto -150px; /* the bottom margin is the negative value of the footer's height */
     }
-    .footer, .push {
-        height: 150px; /* .push must be the same height as .footer */
-        font-size:17px;
-        line-height:22px;
-        font-family: 'Roboto', sans-serif;
-        color:#555;
-    }
-    .small-font {
-        font-size: 16px;
-        line-height: 17px;
-    }
-    .border-right {
-        border-right: 1px dotted gray;
-    }
-    .envelope-address {
-        border: 1px dotted gray;
-        padding-left: 10px;
-    }
 
     </style>
 </head>
@@ -97,6 +76,7 @@
             
             <% sectionList.forEach(function(section){ %>
                 <br><br>
+                <h3> Report Heading </h3>
                 <table cellpadding="0" cellspacing="0">
                     <%if (section.header.display == true) { %>
                         <tr class="heading">
