--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/key-metrics-report/template/settings-key-metrics-report.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/key-metrics-report/template/settings-key-metrics-report.html
@@ -8,7 +8,7 @@
 			</label>
 			<hr>
 			<div class="row">
-				<div class="col-xs-6 col-md-6 form-group">
+				<div class="col-xs-12 col-md-6 form-group">
 					<th-date-picker
 						[initialThDate]="startDate"
 						[label]="'Start date'"
@@ -17,7 +17,7 @@
 					</th-date-picker>
 				</div>
 
-				<div class="col-xs-6 col-md-6 form-group">
+				<div class="col-xs-12 col-md-6 form-group">
 					<th-date-picker
 						[initialThDate]="endDate"
 						[label]="'End date'"
@@ -26,13 +26,18 @@
 					</th-date-picker>
 				</div>
 
-				<div class="col-xs-6 col-md-6 form-group">
+				<div class="col-xs-12 col-md-6 form-group">
 					<label>{{ 'Group Values By' | translate }}</label>
 					<div class="input-group">
 						<select class="form-control" [ngModel]="selectedPeriodType" (ngModelChange)="didSelectPeriodOption($event)">
 							<option *ngFor="let periodOption of periodOptionList" [value]="periodOption.type">{{ periodOption.displayName | translate }}</option>
 						</select>
 					</div>
+				</div>
+
+				<div class="col-xs-12 col-md-6 form-group">
+					<label>{{ 'File Format' | translate }}</label>
+					<report-output-format (onFormatSelected)="didSelectFormat($event)"></report-output-format>
 				</div>
 
 				<div *ngIf="!isLoading" class="col-xs-12 col-md-offset-9 col-md-3">
