#87 Added the scroll directive in the reports section

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/key-metrics-report/template/settings-key-metrics-report.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/key-metrics-report/template/settings-key-metrics-report.html
@@ -1,6 +1,4 @@
-<!--<loading-component [isLoading]="isLoading"></loading-component>-->
-<div class="container-fluid" customScroll>
-	<!--<div class="row basic-info-form" *ngIf="!isLoading">-->
+<div class="container full-height" customScroll>
 	<div class="row basic-info-form">
 		<div class="col-xs-12 col-md-6">
 			<label class="control-label">
