--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/main/template/settings-reports.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/main/template/settings-reports.html
@@ -8,7 +8,7 @@
 			</li>
 		</ul>
 	</div>
-	<div class="basic-info-settings-edit-container">
+	<div class="basic-info-settings-edit-container" customScroll>
 		<router-outlet></router-outlet>
 	</div>
 </div>
