--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/backup-report/template/settings-backup-report.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/backup-report/template/settings-backup-report.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" customScroll>
+<div class="container full-height" customScroll>
 	<div class="row basic-info-form">
 		<div class="col-xs-12 col-md-6">
 			<label class="control-label">
@@ -10,9 +10,7 @@
 					<label>{{ 'File Format' | translate }}</label>
 					<report-output-format (onFormatSelected)="didSelectFormat($event)"></report-output-format>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12 col-md-3">
+				<div class="col-xs-12 col-md-offset-9 col-md-3">
 					<a class="btn btn-primary btn-block" [href]="reportCSVUrl()" target="_blank">{{ 'Generate' | translate }}</a>
 				</div>
 			</div>
