#100 Display available instead of occupied in the YM&KM report & add extra day when getting the YM Report

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-key-metrics/template/yield-key-metrics.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-key-metrics/template/yield-key-metrics.html
@@ -24,7 +24,7 @@
 				</span>
 				<span class="w-100" *ngIf="metric.keyMetricDO.valueType == 2">
 					<span class="key-metric-value oneline-text f-14 w-100" [ngStyle]="getInventoryStyles(value)" title="{{ 'Available / Total' | translate }}">
-						<span [ngStyle]="getInventoryAvailableStyles(value)">{{ value.total - value.available }}</span>/{{ value.total }}
+						<span [ngStyle]="getInventoryAvailableStyles(value)">{{ value.available }}</span>/{{ value.total }}
 					</span>
 				</span>
 			</div>
