--- a/views/reports/invoice.ejs
+++ b/views/reports/invoice.ejs
@@ -15,13 +15,13 @@
         margin:auto;
         padding-right: 20px;
         padding-left: 20px;
-        font-size:17px;
-        line-height:22px;
+        font-size:13px;
+        line-height:19px;
         font-family: 'Roboto', sans-serif;
         color:#555;
     }
     .small-line-height {
-        line-height:17px;
+        line-height:14px;
     }
     
     .invoice-box table{
@@ -31,7 +31,7 @@
     }
     
     .invoice-box table td{
-        padding:5px;
+        padding:4px;
         vertical-align:top;
     }
     
@@ -46,7 +46,7 @@
     }
     
     .invoice-box table tr.details td{
-        padding-bottom:20px;
+        padding-bottom:10px;
     }
     
     .invoice-box table tr.item td{
@@ -86,21 +86,22 @@
         min-height: 100%;
         height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
         height: 100%;
-        margin: 0 auto -150px; /* the bottom margin is the negative value of the footer's height */
+        margin: 0 auto -130px; /* the bottom margin is the negative value of the footer's height */
     }
     .footer, .push {
-        height: 150px; /* .push must be the same height as .footer */
-        font-size:17px;
-        line-height:22px;
+        height: 130px; /* .push must be the same height as .footer */
+        font-size:13px;
+        line-height:19px;
         font-family: 'Roboto', sans-serif;
         color:#555;
+        text-align: center;
     }
     .text-details {
         white-space:pre-wrap;
     }
     .small-font {
-        font-size: 16px;
-        line-height: 17px;
+        font-size: 12px;
+        line-height: 14px;
     }
     .border-right {
         border-right: 1px dotted gray;
@@ -151,7 +152,7 @@
                             </td>
                             <td width="10%"></td>
                             <td width="45%" style="text-align:right;">
-                                <img src="<%= hotelLogoSrcValue %>" style="max-width:100%; max-height:240px; height:auto;"><br>
+                                <img src="<%= hotelLogoSrcValue %>" style="max-width:100%; max-height:160px; height:auto;"><br>
                                 <%= hotelVatLabel %>: <%= hotelVatValue %><br>
                                 <%= invoiceLabel %> : <%= invoiceReference %><br>
                                 <%= dateLabel %>: <%= dateValue %><br>
@@ -254,7 +255,7 @@
         </table>
     </div>
     <div class="footer">
-        <div style="text-align:center; width:100%; padding-top: 25px; padding-left: 35px; padding-right: 35px;">
+        <div style="text-align:center; width:100%; padding-top: 20px; padding-left: 35px; padding-right: 35px;">
             <table style="width:93%;">
                 <tr>
                     <td witdh="0%"></td>
