--- a/views/reports/invoice.ejs
+++ b/views/reports/invoice.ejs
@@ -48,6 +48,9 @@
     .invoice-box table tr.details td{
         padding-bottom:10px;
     }
+    td.title {
+        padding-top: 20px;
+    }
     
     .invoice-box table tr.item td{
         border-bottom:1px solid #eee;
@@ -116,7 +119,7 @@
 
 <body>
     <div class="invoice-box wrapper">
-        <br><br><br>
+        <br>
         <table cellpadding="0" cellspacing="0">
             <tr class="top">
                 <td colspan="5">
