--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-overview/template/room-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-overview/template/room-overview.html
@@ -16,7 +16,11 @@
         </h1>
     </div>
     <div>
-        <small>Accomodates {{ roomVM.capacity.noAdults }} <span class="unitpal-font">:</span> {{ roomVM.capacity.noChildren }} <span class="unitpal-font">;</span> {{ roomVM.capacity.noBabies }} <span class="unitpal-font">B</span> </small>
+        <small>Accomodates {{ roomVM.capacity.noAdults }} <span class="unitpal-font">:</span> 
+            {{ roomVM.capacity.noChildren }} <span class="unitpal-font">;</span> 
+            {{ roomVM.capacity.noBabies }} <span class="unitpal-font">B</span> 
+            {{ roomVM.capacity.noBabyBeds }} <span class="unitpal-font">6</span> 
+        </small>
     </div>
     <div>
         <small>{{ roomVM.room.notes }}</small>
