--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/capacity-edit/template/booking-capacity-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/capacity-edit/template/booking-capacity-editor.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="col-xs-12" *ngIf="!readonly">
-            <div class="col-sm-4 col-xs-12 form-group-small">
+            <div class="col-sm-6 col-sm-6 col-xs-12 form-group-small">
                 <div class="form-group">
                     <div class="input-group input-group-small" [ngClass]="{'form-warning': !bookingCapacity.validNoAdults()}">
                         <span class="input-group-addon"><small></small> <i class="fa unitpal-font">:</i></span>
@@ -22,7 +22,7 @@
                     <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{'Enter a valid number' | translate}}</small></label>
                 </div>
             </div>
-            <div class="col-sm-4 col-xs-12 form-group-small">
+            <div class="col-sm-6 col-xs-12 form-group-small">
                 <div class="form-group">
                     <div class="input-group input-group-small" [ngClass]="{'form-warning': !bookingCapacity.validNoChildren()}">
                         <span class="input-group-addon"><small></small> <i class="fa unitpal-font">;</i></span>
@@ -31,11 +31,20 @@
                     <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{'Enter a valid number' | translate}}</small></label>
                 </div>
             </div>
-            <div class="col-sm-4 col-xs-12 form-group-small">
+            <div class="col-sm-6 col-xs-12 form-group-small">
                 <div class="form-group">
                     <div class="input-group input-group-small" [ngClass]="{'form-warning': !bookingCapacity.validNoBabies()}">
                         <span class="input-group-addon"><small></small> <i class="fa unitpal-font">B</i></span>
                         <input type="number" class="form-control" [(ngModel)]="bookingCapacity.noBabies" name="noBabies">
+                    </div>
+                    <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{'Enter a valid number' | translate}}</small></label>
+                </div>
+            </div>
+            <div class="col-sm-6 col-xs-12 form-group-small">
+                <div class="form-group">
+                    <div class="input-group input-group-small" [ngClass]="{'form-warning': !bookingCapacity.validNoBabyBeds()}">
+                        <span class="input-group-addon"><small></small> <i class="fa unitpal-font">6</i></span>
+                        <input type="number" class="form-control" [(ngModel)]="bookingCapacity.noBabyBeds" name="noBabyBeds">
                     </div>
                     <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{'Enter a valid number' | translate}}</small></label>
                 </div>
