--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/components/search-parameters/template/booking-search-parameters.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/components/search-parameters/template/booking-search-parameters.html
@@ -40,30 +40,38 @@
     <div class="row booking-configuration">
         <div class="col-xs-12">
             <div class="row">
-                <div class="col-md-4 col-xs-12 padding-top-5px">
+                <div class="col-md-3 col-xs-12 padding-top-5px">
                     <span class="unitpal-font">-</span>
                     <small>{{ 'Configuration' | translate }}</small>
                 </div>
-                <div class="col-md-5 col-xs-12 padding-top-5px">
+                <div class="col-md-6 col-xs-12 padding-top-5px">
                     <div class="row">
-                        <div class="col-sm-4 col-xs-12 form-group-small">
+                        <div class="col-sm-3 col-xs-12 form-group-small">
                             <div class="input-group input-group-small" [ngClass]="{'form-warning': !searchParameters.validNoAdults()}">
                                 <span class="input-group-addon"><small></small> <i class="fa unitpal-font">:</i></span>
                                 <input type="number" class="form-control" [(ngModel)]="searchParameters.configCapacity.noAdults" name="noAdults">
                             </div>
                             <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{'Enter a valid number' | translate}}</small></label>
                         </div>
-                        <div class="col-sm-4 col-xs-12 form-group-small">
+                        <div class="col-sm-3 col-xs-12 form-group-small">
                             <div class="input-group input-group-small" [ngClass]="{'form-warning': !searchParameters.validNoChildren()}">
                                 <span class="input-group-addon"><small></small> <i class="fa unitpal-font">;</i></span>
                                 <input type="number" class="form-control" [(ngModel)]="searchParameters.configCapacity.noChildren" name="noChildren">
                             </div>
                             <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{'Enter a valid number' | translate}}</small></label>
                         </div>
-                        <div class="col-sm-4 col-xs-12 form-group-small">
+                        <div class="col-sm-3 col-xs-12 form-group-small">
                             <div class="input-group input-group-small" [ngClass]="{'form-warning': !searchParameters.validNoBabies()}">
                                 <span class="input-group-addon"><small></small> <i class="fa unitpal-font">B</i></span>
                                 <input type="number" class="form-control" [(ngModel)]="searchParameters.configCapacity.noBabies" name="noBabies">
+                            </div>
+                            <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{'Enter a valid number' | translate}}</small></label>
+                        </div>
+
+                        <div class="col-sm-3 col-xs-12 form-group-small">
+                            <div class="input-group input-group-small" [ngClass]="{'form-warning': !searchParameters.validNoBabyBeds()}">
+                                <span class="input-group-addon"><small></small> <i class="fa unitpal-font">6</i></span>
+                                <input type="number" class="form-control" [(ngModel)]="searchParameters.configCapacity.noBabyBeds" name="noBabyBeds">
                             </div>
                             <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{'Enter a valid number' | translate}}</small></label>
                         </div>
